# nevu-ui

./: .gitignore  README.md  README_ru.md  build_wheels.yml  nevu_schema.json  profile_results.prof  pyproject.toml  setup.py  structure_test.json  structure_test.yaml
.github/workflows/: build_wheels.yml
src/nevu_ui/: __init__.py  color.py  core_types.py  fast_logic.pyx  fast_nvvector2.pyx  fast_shapes.c  fast_shapes.pyx  fast_zsystem.pyx  layouts.py  menu.py  nevuobj.py  style.py  utils.py  widgets.py  window.py
src/nevu_ui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/nevu_ui/animations/: animation_base.py  animation_manager.py  animations_library.py
src/nevu_ui/color/: color.py  color_theme.py  color_theme_library.py
src/nevu_ui/components/: __init__.py
src/nevu_ui/components/layouts/: __init__.py  column.py  gallery_pages.py  grid.py  int_picker_grid.py  layout_base.py  layout_type.py  pages.py  row.py  scrollable_base.py  scrollable_column.py  scrollable_row.py  stack_base.py  stack_column.py  stack_row.py  (+1 more)
src/nevu_ui/core/: __init__.py  annotations.py  classes.py  enums.py  modules.py  state.py
src/nevu_ui/fast/: __init__.py
src/nevu_ui/json_parser/: __init__.py  applier.py  validator.py
src/nevu_ui/layouts/: __init__.py  checkbox_group.py  column.py  gallery_pages.py  grid.py  int_picker_grid.py  layout_type.py  pages.py  row.py  scrollable_base.py  scrollable_column.py  scrollable_row.py  stack_base.py  stack_column.py  stack_row.py  typehints.py
src/nevu_ui/manager/: ui_manager.py
src/nevu_ui/menu/: menu.py
src/nevu_ui/nevuobj/: __init__.py  nevuobj.py  typehints.py
src/nevu_ui/nevusurface/: nevusurf.py
src/nevu_ui/overlay/: __init__.py  overlay_manager.py  tooltip.py
src/nevu_ui/parser/: applier.py  base.py  validator.py
src/nevu_ui/presentation/: __init__.py
src/nevu_ui/rendering/: __init__.py  background_renderer.py  background_renderer_rl.py  background_renderergl.py  base_renderer.py  blit.py  gradient.py  shader.py  uni_gradient.py
src/nevu_ui/size/: base.py
src/nevu_ui/struct/: __init__.py  applier.py  base.py
src/nevu_ui/style/: __init__.py  style.py
src/nevu_ui/ui_manager/: ui_manager.py
src/nevu_ui/utils/: __init__.py  cache.py  event.py  input_type.py  keyboard.py  keys.py  mouse.py  normalize.py  raylib_utills.py  time.py
src/nevu_ui/widgets/: __init__.py  button.py  element_switcher.py  empty_widget.py  file_dialog.py  input.py  label.py  music_player.py  progress_bar.py  rect_checkbox.py  slider_bar.py  tooltip.py  typehints.py  widget.py
src/nevu_ui/window/: __init__.py  display.py  window.py
src/pygame_nevui/: __init__.py  animations.py  color.py  nevuobj.py  style.py  widgets.py  window.py
src/pygame_nevui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  light_test_readme.py  main.py  meinya.py  renger_teteseteg.py  tatabebe.py  tatabebe2.py  tatabebe_font  test.py  test_appending_lay.py  test_basic.py  test_grid.py  test_main.py  test_scrollable.py  test_tatabebe.py
tests/citon/: constant_check.py  new_nevuobj.py
tests/layouts/: __init__.py  appending_lay.py  basic.py  grid.py  input.py  scrollable.py  test_basic.py  test_basic2.py  test_circle.py  test_grid.py  test_scrollable.py  typehint.py
tests/pytest/: test_convertor.py  test_element_swither.py
tests/shaders/: base_with_uv.vert  gradient_dark.frag
tests/submodule_test/nevu_gen/: color.py
tests/widgets/: template_gen.py
(+115 files in other folders)
