[build-system]
requires = [
    "setuptools>=61.0",
    "cython",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "nevu-ui"
version = "0.5.4" 
authors = [
  { name="GolemNikidastrov", email="bebrovgolem@gmail.com" },
]
description = "A powerful GUI framework for Pygame that allows you to create menus"
readme = "README.md" 
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame-ce>=2.3.0", 
    "numpy",
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/GolemBebrov/nevu-ui"
Repository = "https://github.com/GolemBebrov/nevu-ui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nevu_ui" = ["*.pyx"]