[build-system]
requires = [
    "setuptools>=78.0",
    "cython",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "nevu-ui"
version = "0.7.5.post1" 
authors = [
  { name="GolemNikidastrov", email="bebrovgolem@gmail.com" },
]
description = "A powerful GUI framework for Python that allows you to create declarative interfaces with ease."
readme = "README.md" 
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "numpy",
    "Pillow",
    "typing_extensions"
]

[project.optional-dependencies]
raylib = [
    "raylib"
]
pygame = [
    "pygame-ce"
]
all = [
    "raylib",
    "pygame-ce"
]

[project.urls]
Homepage = "https://github.com/GolemBebrov/nevu-ui"
Repository = "https://github.com/GolemBebrov/nevu-ui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nevu_ui" = ["*.pyx"]