[build-system]
requires = [
    "setuptools>=78.0",
    "cython",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "nevu-ui"
version = "0.8.2.post1"
authors = [
  { name="GolemNikidastrov", email="bebrovgolem@gmail.com" },
]

keywords = [
    "gui",
    "ui",
    "gamedev",
    "performance",
    "cython",
    "raylib",
    "pygame",
    "pygame-ce",
    "declarative-ui",
    "user-interface",
    "2d-graphics",
    "game-ui",
    "ui-framework",
    "declarative-programming",
    "pyray",
    "python-ui"
]

description = "A powerful multibackend GUI framework for Python. Made for declarative UI creation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Intended Audience :: Developers",
]
dependencies = [
    "numpy",
    "typing_extensions"
]

[project.optional-dependencies]
raylib = [
    "raylib"
]
pygame = [
    "pygame-ce"
]
all = [
    "raylib",
    "pygame-ce"
]

[project.urls]
Homepage = "https://github.com/GolemBebrov/nevu-ui"
Repository = "https://github.com/GolemBebrov/nevu-ui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nevu_ui" = ["*.pyx"]
